UPDATE gitignore for test local FIX bottom gap on figure

--- a/less/core/base.less
+++ b/less/core/base.less
@@ -61,6 +61,9 @@ body {
 
 	// Improved handling of kerning pairs and ligatures in modern
 	text-rendering: optimizeLegibility;
+
+	//Stops Mobile Safari from auto-adjusting font-sizes
+	-webkit-text-size-adjust: 100%;
 }
 
 
@@ -260,9 +263,9 @@ del {
 ins {
 	background-color: @bg-emphasized;
 }
+
+
 /*
-
-
 -----------------------------------------------------------------------------
 3.7 Table Module
 -----------------------------------------------------------------------------
@@ -292,4 +295,19 @@ caption {
 }
 tfoot {
 	font-style: italic;
+}
+
+
+/*
+-----------------------------------------------------------------------------
+3.8 Remove the gap between images, videos, audio and canvas and the bottom of
+    their containers: h5bp.com/i/440
+-----------------------------------------------------------------------------
+*/
+audio,
+canvas,
+img,
+svg,
+video {
+    vertical-align: middle;
 }
